Special thanks to: Eddie Grove, Elly, Stefan O'Rear.

Gameplay/UI changes:
Make the {excellent}-on-wield check work for jewellery too.
Make the object knowledge list sort some items by sval rather than alphabetically.
Items trying to be dropped on the floor now attempt to delete the oldest item on that grid that's been squelched.

Bugs fixed:
(#62) Game is now available entirely under the GPL.
(#521, #597, #635) Stop the slow launches and occasional non-launches on Windows.
(#613) Prevent {!*} prompting for harmless actions.
(#672) Fix Evenstar activation message.
(#641) Fix Morgoth artifacts.
(#683) Fix !Berserk Strength being unsellable.
(#691) Make of Open Wounds similar to ther pval-less rings in that it doesn't need ID.
(#694) Fix dropped rods recharging, and any other rod-related oddities.
(#698) Added '!' to 'R' prompt to rest until mana or hp are full.
(#721) Searching bonues are now displayed as a % increase to match the character screen.
(#738) Add messages for unidentified obviouslly {excellent} items.
(#740, partial #532) Color-code monster melee attacks by how dangerous they are to the current player.
(#741) Stop generating spurious staircases under the player on recall/teleport.
(#730) Mention control+[ANU] in mosnter recall '/' prompt.
(#725) *Remove Curse* now removes all curses again.
Fix bug with rods of treasure location needing ID.
Fix birth_money so that in point-based it still gives you 500AU.

Invisible code changes:
(#513) Refactor the code that prompts for character dump filenames so that it can be overriden by platform-native ports.
Make "make clean" remove all object files in the list, to catch files in subdirectories.
Commit the beginnings of a flag-based terrain system; note that it does absolutely nothing as yet.
Make the z-virt defines cast to the right type so that assignment errors can get caught a bit ealier on.
Fix autoconf install errors.
Remove an unnecessary call to getlogin() which was screwing up su'd users.