@@ -1386,7 +1386,7 @@ G:=:d
 I:45:38:0
 W:0:0:2:800
 A:100:30 to 100
-F:EASY_KNOW
+F:ACTIVATE | TUNNEL
 E:STONE_TO_MUD:15+2d10
 
 
